# MirrorMirror

./: .gitignore  CMakeLists.txt
src/: IContentSearchEngine.hpp  IDescriptor.hpp  IIndexer.hpp  Indexer.cpp  Indexer.hpp  MirrorMirrorEngine.cpp  MirrorMirrorEngine.hpp  main.cpp
src/Descriptors/: DescriptorBase.cpp  DescriptorBase.hpp  SiftDescriptor.cpp  SiftDescriptor.hpp
